% Check from R:
%  news(db = tools:::.build_news_db_from_package_NEWS_Rd("~/R/Pkgs/sfsmisc/inst/NEWS.Rd"))
\name{NEWS}
\title{News for \R Package \pkg{sfsmisc}}
\encoding{UTF-8}

%%% TODO:
      %% \item New \code{rDatetime()} for random date/time sequences
      %% within a specified time range.
\section{CHANGES in sfsmisc VERSION 1.1-5 [2020-02-06]}{
  \subsection{Tweaks}{
    \itemize{
      \item replace \code{class(.) != ".."} in a \emph{comment}, just for
      source code purity ;-)
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Regression tests should not show differences, even when a
      version of R crippled by \code{--no-long-double} is used.

      \item examples now use \code{tempfile()}.
    }
  }
}

\section{CHANGES in sfsmisc VERSION 1.1-4 [2019-04-25]}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{eaxis()} gets new optional argument \code{use.expr} in
      order to force use of \code{pretty10exp()} in a non-log case where
      non-exponential format would be used.

      \item \code{sessionInfoX()} now also returns an element
      \code{isRshared}, and its \code{print()} method prints that and the
      \code{pcre_config()} information on the PCRE.

      \item \code{TA.plot()} now also works for \code{lmer()} results
      (\code{S4} objects, not \code{list}s).
    }
  }
}

\section{CHANGES in sfsmisc VERSION 1.1-3 [2018-11-26]}{
  \subsection{Tweaks}{
    \itemize{
      \item \file{DESCRIPTION} update, contains ORCID.
      \item \file{README.md} links to blog post on (17 yr old -> GH)
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item \code{read.org.table()} thinko (\code{grep()}).
      \item \code{read.org.table(*, encoding=)} notably to work for UTF-8 files.

      \item \code{pretty10exp(*, lab.type="latex")} works better,
      notably for non-trivial \code{sub10}.
    }
  }
}

\section{CHANGES in sfsmisc VERSION 1.1-2 [2018-03-05]}{
  \subsection{NEW FEATURES}{
    \itemize{